--- a/dash_basics.ipynb
+++ b/dash_basics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +41,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we create a skeleton for our dash application. Our dashboard application has three components as seen before:\n",
+    "\n",
+    "Title of the application\n",
+    "Description of the application\n",
+    "Chart conveying the proportion of distance group by month\n",
+    "Mapping to the respective Dash HTML tags:\n",
+    "\n",
+    "Title added using html.H1() tag\n",
+    "Description added using html.P() tag\n",
+    "Chart added using dcc.Graph() tag\n",
+    "Copy the below code to the dash_basics.py script and review the structure.\n",
+    "\n",
+    "NOTE: Copy below the current code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x154823410>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a dash application\n",
+    "app = dash.Dash(__name__)\n",
+    "\n",
+    "# Get the layout of the application and adjust it.\n",
+    "# Create an outer division using html.Div and add title to the dashboard using html.H1 component\n",
+    "# Add description about the graph using HTML P (paragraph) component\n",
+    "# Finally, add graph component.\n",
+    "app.layout = html.Div(children=[html.H1('Airline Dashboard',\n",
+    "                                        style={'textAlign': 'center', 'color': '#503D36', 'font-size': 40}),\n",
+    "                                html.P('Proportion of distance group (250 mile distance interval group) by flights.', \n",
+    "                                       style={'textAlign':'center', 'color': '#F57241'}),\n",
+    "                                dcc.Graph(figure=fig),\n",
+    "                                               \n",
+    "                    ])\n",
+    "\n",
+    "# Run the application                   \n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
